--- a/app/resources/templates/posts/post-create.html
+++ b/app/resources/templates/posts/post-create.html
@@ -8,7 +8,7 @@
 {% endblock scripts %}
 {% block main_content %}
 <div class="container p-5">
-    <form action="/posts" method="POST">
+    <form action="/posts" method="POST" enctype="multipart/form-data">
         <div>
             <div class="w-full text-center">
                 <div class="text-3xl mb-5">
@@ -26,6 +26,7 @@
                     <textarea class="w-full" type="text" name="body" rows="20"></textarea>
                 </div>
             </div>
+            <input type="file" name="image">
         </div> 
         <div class="w-full flex">
             <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Save Post</button>
