--- a/app/resources/templates/posts/post-edit.html
+++ b/app/resources/templates/posts/post-edit.html
@@ -11,7 +11,7 @@
 
 {% block main_content %}
 <div class="container p-5">
-    <form action="/updatePost/{{ post.id }}" method="POST">
+    <form action="/updatePost/{{ post.id }}" method="POST" enctype="multipart/form-data">
         <div>
 			<input type="hidden" name="id" value="{{ post.id }}">
             <div class="w-full text-center">
@@ -30,6 +30,8 @@
                     <textarea class="w-full" type="text" name="body" rows="20">{{ post.body }}</textarea>
                 </div>
             </div>
+            <img src="/{{ post.image }}" alt="Image in post" width="150" height="120">
+            <input type="file" name="image">
         </div> 
         <div class="w-full flex">
             <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Update Post</button>
